// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeTabContent renders code view for selected file 1`] = `

<div>
  <section
    class="w-full flex h-full flex-col"
    style="opacity: 0; filter: blur(2px);"
  >
    <gui-selected-item-empty-state
      icon="gui-file-code-2-icon"
      title="Code exploration not available"
      description="The code for this project could not be loaded"
    >
    </gui-selected-item-empty-state>
  </section>
</div>

`;

exports[`CodeTabContent renders directory listing 1`] = `

<div>
  <section
    class="w-full flex h-full flex-col"
    style="opacity: 0; filter: blur(2px);"
  >
    <div style="opacity: 1; filter: blur(0px);">
      <div class="flex flex-col">
        <div class="border-muted overflow-x-scroll border-b px-6 py-4">
          <h3 class="text-md inline-flex items-baseline gap-1 overflow-x-scroll font-medium whitespace-nowrap">
            <span class="cursor-pointer hover:underline">
              selected-pkg
            </span>
            <span class="text-muted-foreground cursor-default">
              /
            </span>
            <span class="text-muted-foreground hover:text-foreground cursor-pointer transition-colors duration-100 hover:underline">
              root
            </span>
            <span class="text-muted-foreground cursor-default">
              /
            </span>
          </h3>
        </div>
      </div>
      <div
        class="flex flex-col"
        style="opacity: 1; filter: blur(0px);"
      >
        <div class="px-6 pt-4 pb-1">
          <div class="relative flex w-full items-center">
            <gui-search-icon classname="text-muted-foreground absolute ml-3 size-4">
            </gui-search-icon>
            <gui-input
              placeholder="Filter..."
              classname="h-9 rounded-xl pl-9 text-sm"
              value
            >
            </gui-input>
          </div>
        </div>
        <div class="grid grid-cols-12 px-6 pt-4 pb-2">
          <div class="col-span-6">
            <gui-sorting-header
              label="File"
              icon="gui-files-icon"
              dir="unsorted"
            >
            </gui-sorting-header>
          </div>
          <div class="col-span-3 flex justify-center">
            <gui-sorting-header
              label="Type"
              icon="gui-file-sliders"
              dir="unsorted"
            >
            </gui-sorting-header>
          </div>
          <div class="col-span-3 flex justify-end text-right">
            <gui-sorting-header
              label="Size"
              icon="gui-decimals-arrow-right"
              dir="unsorted"
            >
            </gui-sorting-header>
          </div>
        </div>
        <gui-package-content-item item="[object Object]">
        </gui-package-content-item>
        <gui-package-content-item item="[object Object]">
        </gui-package-content-item>
        <gui-package-content-item item="[object Object]">
        </gui-package-content-item>
      </div>
    </div>
  </section>
</div>

`;

exports[`CodeTabContent renders empty state 1`] = `

<div>
  <section
    class="w-full flex h-full flex-col"
    style="opacity: 0; filter: blur(2px);"
  >
    <gui-selected-item-empty-state
      icon="gui-file-code-2-icon"
      title="Code exploration not available"
      description="The code for this project could not be loaded"
    >
    </gui-selected-item-empty-state>
  </section>
</div>

`;

exports[`CodeTabContent renders error state 1`] = `

<div>
  <section
    class="w-full flex h-full flex-col"
    style="opacity: 0; filter: blur(2px);"
  >
    <gui-selected-item-empty-state
      icon="gui-file-warning-icon"
      title="An error occured"
      description="One or more errors have occured:"
      content="[object Object]"
    >
    </gui-selected-item-empty-state>
  </section>
</div>

`;

exports[`CodeTabContent renders loading state 1`] = `

<div>
  <section
    class="w-full flex h-full flex-col"
    style="opacity: 0; filter: blur(2px);"
  >
    <div style="opacity: 1; filter: blur(0px);">
      <gui-loading-state>
      </gui-loading-state>
    </div>
  </section>
</div>

`;
